--- a/Karpov_Courses_stepik.org/Introduction in DS and ML/Homeworks/Lecture_002/Karpov_courses_homework_002.ipynb
+++ b/Karpov_Courses_stepik.org/Introduction in DS and ML/Homeworks/Lecture_002/Karpov_courses_homework_002.ipynb
@@ -6,21 +6,29 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "#Importing libraries for workflow\n",
+    "#Importer des bibliotheques pour le flux de travail\n",
+    "#Импорт библиотек для работы\n",
+    "\n",
     "import pandas as pd"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
+    "#Loading data frame into sp\n",
+    "#Chargement de la dataframe dans sp\n",
+    "#Загрузка данных в переменную sp\n",
+    "\n",
     "sp=pd.read_csv('C:/Users/9/Downloads/StudentsPerformance.csv')"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
@@ -114,18 +122,22 @@
        "max     100.00000     100.000000     100.000000"
       ]
      },
-     "execution_count": 5,
+     "execution_count": 3,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
+    "#Descripting numeric data\n",
+    "#Description des donnees numeriques\n",
+    "#Описание числовых данных\n",
+    "\n",
     "sp.describe()"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
@@ -300,18 +312,22 @@
        "9                    none          38             60             50  "
       ]
      },
-     "execution_count": 6,
+     "execution_count": 4,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
+    "#Show the first 10 lines\n",
+    "#Afficher les 10 premieres lignes\n",
+    "#Показать 10 первых строк\n",
+    "\n",
     "sp.head(10)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
@@ -331,18 +347,22 @@
        "Name: lunch, Length: 1000, dtype: bool"
       ]
      },
-     "execution_count": 10,
+     "execution_count": 5,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
+    "#View of a series where the lunch is free/reduced\n",
+    "#Vue d'une serie ou le dejeuner est gratuit/reduit\n",
+    "#Представление серии в которой обед - бесплатный/льготный\n",
+    "\n",
     "sp.lunch =='free/reduced'"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
@@ -533,18 +553,22 @@
        "[355 rows x 8 columns]"
       ]
      },
-     "execution_count": 11,
+     "execution_count": 6,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
+    "#Selecting attributes where the lunch is free/reduced\n",
+    "#Selection des attibuts ou le dejeuner est gratuit/reduit\n",
+    "#Выбор атрибутов, где обед - бесплатный/льготный\n",
+    "\n",
     "sp.loc[sp.lunch =='free/reduced']"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
@@ -553,36 +577,48 @@
        "0.355"
       ]
      },
-     "execution_count": 12,
+     "execution_count": 7,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
+    "#Calculating\n",
+    "#Calculation\n",
+    "#Рассчет\n",
+    "\n",
     "355/1000"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [],
    "source": [
+    "#Creating a new dataframe where the lunch is free/reduced\n",
+    "#Creation une nouveau dataframe ou le dejeuner est gratuit/reduit\n",
+    "#Создание нового датафрейма, где обед - бесплатный/льготный\n",
+    "\n",
     "fr=sp.loc[sp.lunch =='free/reduced']"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [],
    "source": [
+    "#Creating a new dataframe where the lunch is standart\n",
+    "#Creation une nouveau dataframe ou le dejeuner est standard\n",
+    "#Создание нового датафрейма, где обед - стандартный\n",
+    "\n",
     "std=sp.loc[sp.lunch =='standard']"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [
     {
@@ -692,27 +728,35 @@
        "5                    none          71             83             78  "
       ]
      },
-     "execution_count": 19,
+     "execution_count": 10,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
+    "#Show the first 5 lines\n",
+    "#Afficher les 5 premieres lignes\n",
+    "#Показать 5 первых строк\n",
+    "\n",
     "std.head()"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [],
    "source": [
+    "#Creating variable mean math score\n",
+    "#Creation d'un score mathematique moyen variable\n",
+    "#Создание переменной средней оценки по математике\n",
+    "\n",
     "mean_ms_fr = fr['math score'].mean()"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [
     {
@@ -721,27 +765,34 @@
        "58.92112676056338"
       ]
      },
-     "execution_count": 21,
+     "execution_count": 12,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
+    "#The result\n",
+    "#Le resultat\n",
+    "#Результат\n",
     "mean_ms_fr"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [],
    "source": [
+    "#Creating variable mean math score\n",
+    "#Creation d'un score mathematique moyen variable\n",
+    "#Создание переменной средней оценки по математике\n",
+    "\n",
     "mean_ms_std = std['math score'].mean()"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [
     {
@@ -750,27 +801,35 @@
        "70.03410852713178"
       ]
      },
-     "execution_count": 23,
+     "execution_count": 14,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
+    "#The result\n",
+    "#Le resultat\n",
+    "#Результат\n",
+    "\n",
     "mean_ms_std"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [],
    "source": [
+    "#Creating variable mean reading score\n",
+    "#Creation d'un score de lecture moyen variable\n",
+    "#Создание переменной средней оценки по чтению\n",
+    "\n",
     "mean_rs_fr = fr['reading score'].mean()"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": 16,
    "metadata": {},
    "outputs": [
     {
@@ -779,27 +838,35 @@
        "64.65352112676057"
       ]
      },
-     "execution_count": 25,
+     "execution_count": 16,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
+    "#The result\n",
+    "#Le resultat\n",
+    "#Результат\n",
+    "\n",
     "mean_rs_fr"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 26,
+   "execution_count": 17,
    "metadata": {},
    "outputs": [],
    "source": [
+    "#Creating variable mean reading score\n",
+    "#Creation d'un score de lecture moyen variable\n",
+    "#Создание переменной средней оценки по чтению\n",
+    "\n",
     "mean_rs_std = std['reading score'].mean()"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 27,
+   "execution_count": 18,
    "metadata": {},
    "outputs": [
     {
@@ -808,27 +875,35 @@
        "71.65426356589147"
       ]
      },
-     "execution_count": 27,
+     "execution_count": 18,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
+    "#The result\n",
+    "#Le resultat\n",
+    "#Результат\n",
+    "\n",
     "mean_rs_std"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 28,
+   "execution_count": 19,
    "metadata": {},
    "outputs": [],
    "source": [
+    "#Creating variable mean writing score\n",
+    "#Creation d'un score d'ecriture moyen variable\n",
+    "#Создание переменной средней оценки по письму\n",
+    "\n",
     "mean_ws_fr = fr['writing score'].mean()"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 29,
+   "execution_count": 20,
    "metadata": {},
    "outputs": [
     {
@@ -837,27 +912,35 @@
        "63.02253521126761"
       ]
      },
-     "execution_count": 29,
+     "execution_count": 20,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
+    "#The result\n",
+    "#Le resultat\n",
+    "#Результат\n",
+    "\n",
     "mean_ws_fr"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 30,
+   "execution_count": 21,
    "metadata": {},
    "outputs": [],
    "source": [
+    "#Creating variable mean writing score\n",
+    "#Creation d'un score d'ecriture moyen variable\n",
+    "#Создание переменной средней оценки по письму\n",
+    "\n",
     "mean_ws_std = std['writing score'].mean()"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 31,
+   "execution_count": 22,
    "metadata": {},
    "outputs": [
     {
@@ -866,27 +949,35 @@
        "70.8232558139535"
       ]
      },
-     "execution_count": 31,
+     "execution_count": 22,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
+    "#The result\n",
+    "#Le resultat\n",
+    "#Результат\n",
+    "\n",
     "mean_ws_std"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 32,
+   "execution_count": 23,
    "metadata": {},
    "outputs": [],
    "source": [
+    "#Calculating variance\n",
+    "#Calculation de la variance\n",
+    "#Рассчет дисперсии\n",
+    "\n",
     "var_ms_fr = fr['math score'].var()"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 33,
+   "execution_count": 24,
    "metadata": {},
    "outputs": [
     {
@@ -895,27 +986,35 @@
        "229.8242699132649"
       ]
      },
-     "execution_count": 33,
+     "execution_count": 24,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
+    "#The result\n",
+    "#Le resultat\n",
+    "#Результат\n",
+    "\n",
     "var_ms_fr"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 34,
+   "execution_count": 25,
    "metadata": {},
    "outputs": [],
    "source": [
+    "#Calculating variance\n",
+    "#Calculation de la variance\n",
+    "#Рассчет дисперсии\n",
+    "\n",
     "var_ms_std = std['math score'].var()"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 35,
+   "execution_count": 26,
    "metadata": {},
    "outputs": [
     {
@@ -924,27 +1023,35 @@
        "186.41808946025324"
       ]
      },
-     "execution_count": 35,
+     "execution_count": 26,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
+    "#The result\n",
+    "#Le resultat\n",
+    "#Результат\n",
+    "\n",
     "var_ms_std"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 36,
+   "execution_count": 27,
    "metadata": {},
    "outputs": [],
    "source": [
+    "#Calculating variance\n",
+    "#Calculation de la variance\n",
+    "#Рассчет дисперсии\n",
+    "\n",
     "var_rs_fr = fr['reading score'].var()"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 37,
+   "execution_count": 28,
    "metadata": {},
    "outputs": [
     {
@@ -953,27 +1060,35 @@
        "221.8711386965864"
       ]
      },
-     "execution_count": 37,
+     "execution_count": 28,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
+    "#The result\n",
+    "#Le resultat\n",
+    "#Результат\n",
+    "\n",
     "var_rs_fr"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 38,
+   "execution_count": 29,
    "metadata": {},
    "outputs": [],
    "source": [
+    "#Calculating variance\n",
+    "#Calculation de la variance\n",
+    "#Рассчет дисперсии\n",
+    "\n",
     "var_rs_std = std['reading score'].var()"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 39,
+   "execution_count": 30,
    "metadata": {},
    "outputs": [
     {
@@ -982,27 +1097,35 @@
        "191.28556020992812"
       ]
      },
-     "execution_count": 39,
+     "execution_count": 30,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
+    "#The result\n",
+    "#Le resultat\n",
+    "#Результат\n",
+    "\n",
     "var_rs_std"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 40,
+   "execution_count": 31,
    "metadata": {},
    "outputs": [],
    "source": [
+    "#Calculating variance\n",
+    "#Calculation de la variance\n",
+    "#Рассчет дисперсии\n",
+    "\n",
     "var_ws_fr = fr['writing score'].var()"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 41,
+   "execution_count": 32,
    "metadata": {},
    "outputs": [
     {
@@ -1011,27 +1134,35 @@
        "238.20288056019737"
       ]
      },
-     "execution_count": 41,
+     "execution_count": 32,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
+    "#The result\n",
+    "#Le resultat\n",
+    "#Результат\n",
+    "\n",
     "var_ws_fr"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 42,
+   "execution_count": 33,
    "metadata": {},
    "outputs": [],
    "source": [
+    "#Calculating variance\n",
+    "#Calculation de la variance\n",
+    "#Рассчет дисперсии\n",
+    "\n",
     "var_ws_std = std['writing score'].var()"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 43,
+   "execution_count": 34,
    "metadata": {},
    "outputs": [
     {
@@ -1040,27 +1171,35 @@
        "205.62088689874332"
       ]
      },
-     "execution_count": 43,
+     "execution_count": 34,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
+    "#The result\n",
+    "#Le resultat\n",
+    "#Результат\n",
+    "\n",
     "var_ws_std"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 44,
+   "execution_count": 35,
    "metadata": {},
    "outputs": [],
    "source": [
-    "df=sp=pd.read_csv('C:/Users/9/Downloads/column_hell.csv')"
+    "#Loading data frame into df\n",
+    "#Chargement de la dataframe dans df\n",
+    "#Загрузка данных в переменную df\n",
+    "\n",
+    "df=pd.read_csv('C:/Users/9/Downloads/column_hell.csv')"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 45,
+   "execution_count": 36,
    "metadata": {},
    "outputs": [
     {
@@ -1258,18 +1397,22 @@
        "[5 rows x 75 columns]"
       ]
      },
-     "execution_count": 45,
+     "execution_count": 36,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
+    "#Show the first 10 lines\n",
+    "#Afficher les 10 premieres lignes\n",
+    "#Показать 10 первых строк\n",
+    "\n",
     "df.head()"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 46,
+   "execution_count": 37,
    "metadata": {},
    "outputs": [
     {
@@ -1423,21 +1566,18 @@
        "[100 rows x 6 columns]"
       ]
      },
-     "execution_count": 46,
+     "execution_count": 37,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
+    "#Using the filter function\n",
+    "#Utilisation de la fonction de filter\n",
+    "#Использование функции фильтр\n",
+    "\n",
     "df.filter(like='-')"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
   }
  ],
  "metadata": {
