Update Introduction to matrices.ipynb

--- a/Maths/Introduction to matrices.ipynb
+++ b/Maths/Introduction to matrices.ipynb
@@ -10,7 +10,8 @@
     "import matplotlib.pyplot as plt\n",
     "from sympy import *\n",
     "from mpl_toolkits.mplot3d import Axes3D\n",
-    "from numpy.linalg import matrix_power"
+    "from numpy.linalg import matrix_power\n",
+    "from numpy import matrix"
    ]
   },
   {
@@ -146,8 +147,8 @@
      "output_type": "stream",
      "text": [
       "[[0.00000000e+000 0.00000000e+000 0.00000000e+000]\n",
-      " [0.00000000e+000 0.00000000e+000 5.63234836e-321]\n",
-      " [4.10463701e-288 2.29812144e-311 0.00000000e+000]]\n"
+      " [0.00000000e+000 0.00000000e+000 8.20148972e-321]\n",
+      " [4.10463701e-288 2.29812144e-311 3.44886448e-307]]\n"
      ]
     }
    ],
@@ -547,7 +548,7 @@
     {
      "data": {
       "text/plain": [
-       "10.5"
+       "array([ 8.5,  9.5, 10.5, 11.5, 12.5])"
       ]
      },
      "execution_count": 27,
@@ -556,7 +557,7 @@
     }
    ],
    "source": [
-    "mass.mean()"
+    "mass.mean(axis=0)"
    ]
   },
   {
@@ -771,6 +772,123 @@
    ],
    "source": [
     "matrix_power(a, 3)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 38,
+   "metadata": {
+    "scrolled": true
+   },
+   "outputs": [],
+   "source": [
+    "A = matrix([[1,2,3],[5,6,7]])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 39,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "matrix([[1, 2, 3],\n",
+       "        [5, 6, 7]])"
+      ]
+     },
+     "execution_count": 39,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "A"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 40,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "2"
+      ]
+     },
+     "execution_count": 40,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "A.shape[0]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 41,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "3"
+      ]
+     },
+     "execution_count": 41,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "A.shape[1]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 42,
+   "metadata": {
+    "scrolled": true
+   },
+   "outputs": [],
+   "source": [
+    "X = np.array([[1, 60],[1, 50],[1,75]])\n",
+    "y = np.array([[10],[7],[12]])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 43,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "step1 = X.T.dot(X)\n",
+    "step2 = np.linalg.inv(step1)\n",
+    "step3 = step2.dot(X.T)\n",
+    "b = step3.dot(y)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 44,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array([[-2.34210526],\n",
+       "       [ 0.19473684]])"
+      ]
+     },
+     "execution_count": 44,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "b"
    ]
   }
  ],
