--- a/Karpov_Courses_stepik.org/Introduction in DS and ML/Homeworks/Lecture_003/Homework_003.ipynb
+++ b/Karpov_Courses_stepik.org/Introduction in DS and ML/Homeworks/Lecture_003/Homework_003.ipynb
@@ -6,6 +6,10 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "#Importing libraries for workflow\n",
+    "#Importer des bibliotheques pour le flux de travail\n",
+    "#Импорт библиотек для работы\n",
+    "\n",
     "import pandas as pd"
    ]
   },
@@ -15,6 +19,10 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "#Loading data frame into df\n",
+    "#Chargement de la dataframe dans df\n",
+    "#Загрузка данных в переменную df\n",
+    "\n",
     "df=pd.read_csv('C:/Users/9/Downloads/dota_hero_stats.csv')"
    ]
   },
@@ -213,12 +221,16 @@
     }
    ],
    "source": [
+    "#Show the first 10 lines\n",
+    "#Afficher les 10 premieres lignes\n",
+    "#Показать 10 первых строк\n",
+    "\n",
     "df.head(10)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
@@ -341,27 +353,35 @@
        "8         1  "
       ]
      },
-     "execution_count": 10,
+     "execution_count": 4,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
+    "#Number unique values for each pair of legs\n",
+    "#Nombre des valeurs uniques pour chaque paire de jambes\n",
+    "#Количество уникальных значений по количеству ног\n",
+    "\n",
     "df.groupby(['legs']).nunique()"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
+    "#Loading data frame into lp\n",
+    "#Chargement de la dataframe dans lp\n",
+    "#Загрузка данных в переменную lp\n",
+    "\n",
     "lp=pd.read_csv('C:/Users/9/Downloads/accountancy.csv')"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
@@ -480,18 +500,22 @@
        "9           9     Pupa    E      65"
       ]
      },
-     "execution_count": 12,
+     "execution_count": 6,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
+    "#Show the first 10 lines\n",
+    "#Afficher les 10 premieres lignes\n",
+    "#Показать 10 первых строк\n",
+    "\n",
     "lp.head(10)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
@@ -513,18 +537,22 @@
        "Name: Salary, dtype: float64"
       ]
      },
-     "execution_count": 13,
+     "execution_count": 7,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
+    "#Grouping by the executor, type with a mean salary\n",
+    "#Groupement par executeur, tapez avec un salaire moyen\n",
+    "#Группировка по имени и типу с указанием средних зарплат\n",
+    "\n",
     "lp.groupby(['Executor', 'Type']).Salary.mean()"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [
     {
@@ -540,35 +568,18 @@
        "Name: roles, dtype: int64"
       ]
      },
-     "execution_count": 17,
+     "execution_count": 8,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
+    "#Number unique role values for attack type\n",
+    "#Nombre des valeurs de role uniques pour le type d'attaque\n",
+    "#Количество уникальных значений ролей по типу атаки\n",
+    "\n",
     "df.groupby(['attack_type', 'primary_attr']).roles.nunique()"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
   }
  ],
  "metadata": {
