--- a/Karpov_Courses_stepik.org/Introduction in DS and ML/Lectures/Lecture_007/Lecture_007.ipynb
+++ b/Karpov_Courses_stepik.org/Introduction in DS and ML/Lectures/Lecture_007/Lecture_007.ipynb
@@ -20,6 +20,10 @@
     }
    ],
    "source": [
+    "#Importing libraries for workflow\n",
+    "#Importer des bibliotheques pour le flux de travail\n",
+    "#Импорт библиотек для работ\n",
+    "\n",
     "import pandas as pd\n",
     "import numpy as np\n",
     "import matplotlib.pyplot as plt\n",
@@ -42,6 +46,10 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "#Loading data frame into td\n",
+    "#Chargement de la dataframe dans td\n",
+    "#Загрузка данных в переменную td\n",
+    "\n",
     "td=pd.read_csv('C:/Users/9/Downloads/titanic_data/train.csv')"
    ]
   },
@@ -284,6 +292,10 @@
     }
    ],
    "source": [
+    "#Show the first 10 lines\n",
+    "#Afficher les 10 premieres lignes\n",
+    "#Показать 10 первых строк\n",
+    "\n",
     "td.head(10)"
    ]
   },
@@ -316,6 +328,10 @@
     }
    ],
    "source": [
+    "#Counting null  values\n",
+    "#Comptagement des valeurs nulles\n",
+    "#Количество нулевых значений\n",
+    "\n",
     "td.isnull().sum()"
    ]
   },
@@ -325,6 +341,10 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "#Data preparation\n",
+    "#Preparation des donnees\n",
+    "#Подготовка данных\n",
+    "\n",
     "X = td.drop(['PassengerId', 'Survived', 'Name', 'Ticket', 'Cabin'], axis=1)"
    ]
   },
@@ -334,6 +354,10 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "#Data preparation\n",
+    "#Preparation des donnees\n",
+    "#Подготовка данных\n",
+    "\n",
     "y = td.Survived"
    ]
   },
@@ -497,6 +521,10 @@
     }
    ],
    "source": [
+    "#Show the first 10 lines\n",
+    "#Afficher les 10 premieres lignes\n",
+    "#Показать 10 первых строк\n",
+    "\n",
     "X.head(10)"
    ]
   },
@@ -506,6 +534,10 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "#Data preparation\n",
+    "#Preparation des donnees\n",
+    "#Подготовка данных\n",
+    "\n",
     "X = pd.get_dummies(X)"
    ]
   },
@@ -714,6 +746,10 @@
     }
    ],
    "source": [
+    "#Show the first 10 lines\n",
+    "#Afficher les 10 premieres lignes\n",
+    "#Показать 10 первых строк\n",
+    "\n",
     "X.head(10)"
    ]
   },
@@ -734,6 +770,10 @@
     }
    ],
    "source": [
+    "#Calculating median age value\n",
+    "#Calculation de la valeur de l'age median\n",
+    "#Вычисление медианного среднего значение возраста\n",
+    "\n",
     "X.Age.median()"
    ]
   },
@@ -743,6 +783,10 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "#Filling the null values\n",
+    "#Remplition les valeurs nulles\n",
+    "#Заполнение нулевых значений\n",
+    "\n",
     "X = X.fillna({'Age': X.Age.median()})"
    ]
   },
@@ -773,6 +817,10 @@
     }
    ],
    "source": [
+    "#Counting null  values\n",
+    "#Comptagement des valeurs nulles\n",
+    "#Количество нулевых значений\n",
+    "\n",
     "X.isnull().sum()"
    ]
   },
@@ -782,6 +830,11 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "#Choosing a classifier\n",
+    "#Choisition un classificateur\n",
+    "#Выбор классификатора\n",
+    "\n",
+    "\n",
     "clf = tree.DecisionTreeClassifier(criterion='entropy')"
    ]
   },
@@ -802,6 +855,10 @@
     }
    ],
    "source": [
+    "#Fitting the model\n",
+    "#Montage du modele\n",
+    "#Обучение модели\n",
+    "\n",
     "clf.fit(X, y)"
    ]
   },
@@ -835,6 +892,10 @@
     }
    ],
    "source": [
+    "#Show the parameters\n",
+    "#Afficher les parametres\n",
+    "#Просмотр параметров\n",
+    "\n",
     "clf.get_params()"
    ]
   },
@@ -1265,6 +1326,10 @@
     }
    ],
    "source": [
+    "#Plotting the decision tree\n",
+    "#Tracement l'arbre de decision\n",
+    "#Простроение дерева решений\n",
+    "\n",
     "plt.figure(figsize=(100, 25))\n",
     "tree.plot_tree(clf, fontsize=10, feature_names=list(X), filled=True)"
    ]
@@ -1275,6 +1340,10 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "#Importing the module\n",
+    "#Importement le module\n",
+    "#Импорт модуля\n",
+    "\n",
     "from sklearn.model_selection import train_test_split"
    ]
   },
@@ -1284,6 +1353,10 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "#Train\\Test splitting method\n",
+    "#Methode de franctionnement Train/Test\n",
+    "#Разделение на тренировочную/тестовую выборки\n",
+    "\n",
     "X_train, X_test, y_train, y_test = train_test_split(X, y, test_size=0.33, random_state=42)"
    ]
   },
@@ -1304,6 +1377,10 @@
     }
    ],
    "source": [
+    "#Training set size\n",
+    "#Taille de l'ensemble d'entrainement\n",
+    "#Размер тренировочной выборки\n",
+    "\n",
     "X_train.shape"
    ]
   },
@@ -1324,6 +1401,10 @@
     }
    ],
    "source": [
+    "#Testing set size\n",
+    "#Taille de l'ensemble de test\n",
+    "#Размер тестовой выборки\n",
+    "\n",
     "X_test.shape"
    ]
   },
@@ -1344,6 +1425,10 @@
     }
    ],
    "source": [
+    "#Model's score\n",
+    "#Score du modele\n",
+    "#Оценка модели\n",
+    "\n",
     "clf.score(X, y)"
    ]
   },
@@ -1364,6 +1449,10 @@
     }
    ],
    "source": [
+    "#Fitting the model\n",
+    "#Montage du modele\n",
+    "#Обучение модели\n",
+    "\n",
     "clf.fit(X_train, y_train)"
    ]
   },
@@ -1397,6 +1486,10 @@
     }
    ],
    "source": [
+    "#Show the parameters\n",
+    "#Afficher les parametres\n",
+    "#Просмотр параметров\n",
+    "\n",
     "clf.fit(X_train, y_train).get_params()"
    ]
   },
@@ -1417,6 +1510,10 @@
     }
    ],
    "source": [
+    "#Model's score\n",
+    "#Score du modele\n",
+    "#Оценка модели\n",
+    "\n",
     "clf.score(X_train, y_train)"
    ]
   },
@@ -1437,6 +1534,10 @@
     }
    ],
    "source": [
+    "#Model's score\n",
+    "#Score du modele\n",
+    "#Оценка модели\n",
+    "\n",
     "clf.score(X_test, y_test)"
    ]
   },
@@ -1446,6 +1547,10 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "#Choosing a classifier\n",
+    "#Choisition un classificateur\n",
+    "#Выбор классификатора\n",
+    "\n",
     "clf = tree.DecisionTreeClassifier(criterion='entropy', max_depth = 5)"
    ]
   },
@@ -1479,6 +1584,10 @@
     }
    ],
    "source": [
+    "#Show the parameters\n",
+    "#Afficher les parametres\n",
+    "#Просмотр параметров\n",
+    "\n",
     "clf.get_params()"
    ]
   },
@@ -1499,6 +1608,10 @@
     }
    ],
    "source": [
+    "#Fitting the model\n",
+    "#Montage du modele\n",
+    "#Обучение модели\n",
+    "\n",
     "clf.fit(X_train, y_train)"
    ]
   },
@@ -1519,6 +1632,10 @@
     }
    ],
    "source": [
+    "#Model's score\n",
+    "#Score du modele\n",
+    "#Оценка модели\n",
+    "\n",
     "clf.score(X_train, y_train)"
    ]
   },
@@ -1539,6 +1656,10 @@
     }
    ],
    "source": [
+    "#Model's score\n",
+    "#Score du modele\n",
+    "#Оценка модели\n",
+    "\n",
     "clf.score(X_test, y_test)"
    ]
   },
@@ -1548,6 +1669,10 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "#Choosing a classifier\n",
+    "#Choisition un classificateur\n",
+    "#Выбор классификатора\n",
+    "\n",
     "clf = tree.DecisionTreeClassifier(criterion='entropy', max_depth = 3)"
    ]
   },
@@ -1581,6 +1706,10 @@
     }
    ],
    "source": [
+    "#Show the parameters\n",
+    "#Afficher les parametres\n",
+    "#Просмотр параметров\n",
+    "\n",
     "clf.get_params()"
    ]
   },
@@ -1601,6 +1730,10 @@
     }
    ],
    "source": [
+    "#Fitting the model\n",
+    "#Montage du modele\n",
+    "#Обучение модели\n",
+    "\n",
     "clf.fit(X_train, y_train)"
    ]
   },
@@ -1621,6 +1754,10 @@
     }
    ],
    "source": [
+    "#Model's score\n",
+    "#Score du modele\n",
+    "#Оценка модели\n",
+    "\n",
     "clf.score(X_train, y_train)"
    ]
   },
@@ -1641,6 +1778,10 @@
     }
    ],
    "source": [
+    "#Model's score\n",
+    "#Score du modele\n",
+    "#Оценка модели\n",
+    "\n",
     "clf.score(X_test, y_test)"
    ]
   },
@@ -1650,6 +1791,10 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "#Creating a variable\n",
+    "#Creation une variable\n",
+    "#Создание переменной\n",
+    "\n",
     "max_depth_values = range(1, 100)"
    ]
   },
@@ -1659,6 +1804,10 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "#Creating dataframe\n",
+    "#Creation de dataframe\n",
+    "#Создание датафрейма\n",
+    "\n",
     "scores_data = pd.DataFrame()"
    ]
   },
@@ -1668,6 +1817,10 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "#Importing the module\n",
+    "#Importement le module\n",
+    "#Импорт модуля\n",
+    "\n",
     "from sklearn.model_selection import cross_val_score"
    ]
   },
@@ -1677,6 +1830,10 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "#Choosing a classifier\n",
+    "#Choisition un classificateur\n",
+    "#Выбор классификатора\n",
+    "\n",
     "clf = tree.DecisionTreeClassifier(criterion='entropy', max_depth = 4)"
    ]
   },
@@ -1697,6 +1854,10 @@
     }
    ],
    "source": [
+    "#Cross-validation score\n",
+    "#Score du validation croisee\n",
+    "#Показатели кросс валидации\n",
+    "\n",
     "cross_val_score(clf, X_train, y_train, cv = 5)"
    ]
   },
@@ -1706,6 +1867,10 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "#Looking for the optimal depth\n",
+    "#Recherche de la profondeur optimal\n",
+    "#Поиск оптимальной глубины\n",
+    "\n",
     "for max_depth in max_depth_values:\n",
     "    clf = tree.DecisionTreeClassifier(criterion='entropy', max_depth = max_depth)\n",
     "    clf.fit(X_train, y_train)\n",
@@ -1846,6 +2011,10 @@
     }
    ],
    "source": [
+    "#Show the first 10 lines\n",
+    "#Afficher les 10 premieres lignes\n",
+    "#Показать 10 первых строк\n",
+    "\n",
     "scores_data.head(10)"
    ]
   },
@@ -1855,6 +2024,10 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "#Dataframe conversion\n",
+    "#Conversion de trame de donnees\n",
+    "#Преобразование датафрейма\n",
+    "\n",
     "sdl = pd.melt(scores_data, id_vars = ['max_depth'], value_vars = ['train_score', 'test_score', 'cross_val_score'],\n",
     "             var_name='set_type', value_name='score')"
    ]
@@ -1940,6 +2113,10 @@
     }
    ],
    "source": [
+    "#Show the first 5 lines\n",
+    "#Afficher les 5 premieres lignes\n",
+    "#Показать 5 первых строк\n",
+    "\n",
     "sdl.head()"
    ]
   },
@@ -2024,6 +2201,10 @@
     }
    ],
    "source": [
+    "#Show the дфые 5 lines\n",
+    "#Afficher les 5 dernieres lignes\n",
+    "#Показать 5 последних строк\n",
+    "\n",
     "sdl.tail()"
    ]
   },
@@ -2056,6 +2237,10 @@
     }
    ],
    "source": [
+    "#Drawing a line plot\n",
+    "#Dessintion un trace lineaire\n",
+    "#Построение графика\n",
+    "\n",
     "sns.lineplot(x='max_depth', y='score', hue='set_type', data=sdl)"
    ]
   },
@@ -2245,6 +2430,10 @@
     }
    ],
    "source": [
+    "#Show the first 20 lines cross validaton score\n",
+    "#Afficher les 20 premieres lignes de score du validation croisee\n",
+    "#Показать 20 первых строк показателей кросс валидации\n",
+    "\n",
     "sdl.query(\"set_type == 'cross_val_score'\").head(20)"
    ]
   },
@@ -2254,6 +2443,10 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "#Choosing a classifier\n",
+    "#Choisition un classificateur\n",
+    "#Выбор классификатора\n",
+    "\n",
     "best_clf = tree.DecisionTreeClassifier(criterion='entropy', max_depth = 10)"
    ]
   },
@@ -2274,6 +2467,10 @@
     }
    ],
    "source": [
+    "#Fitting the model\n",
+    "#Montage du modele\n",
+    "#Обучение модели\n",
+    "\n",
     "best_clf.fit(X_train, y_train)"
    ]
   },
@@ -2294,6 +2491,10 @@
     }
    ],
    "source": [
+    "#Model's score\n",
+    "#Score du modele\n",
+    "#Оценка модели\n",
+    "\n",
     "best_clf.score(X_test, y_test)"
    ]
   }
